Create an OnCardFlippedListener to be notified when user has flipped a card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name">Memory Game</string>
 
+    <string name="card_content_description_prefix">"Card "</string>
     <string name="card_content_description_face_down">Card %d</string>
     <string name="card_content_description_face_up">"Card %1$d is a %2$s"</string>
 </resources>
