Handle card already flipped error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="card_content_description_prefix">"Card "</string>
     <string name="card_content_description_face_down">Card %d</string>
     <string name="card_content_description_face_up">"Card %1$d is a %2$s"</string>
+
+    <string name="card_already_flipped_error">Error: card %1$d is already facing up. Please select a face-down card.</string>
 </resources>
