--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
 
     <string name="card_already_flipped_error">Error: card %1$d is already facing up. Please select a face-down card.</string>
     <string name="pair_invalid">Invalid pair.</string>
-    <string name="game_over">Game is over. Congratulations!</string>
+    <string name="game_over">Game is over. Congratulations! You found all the cards in %d seconds</string>
 </resources>
