--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,5 +15,5 @@
 
     <string name="card_already_flipped_error">Erreur : la carte %1$d est déjà retournée. Veuillez choisir une carte face cachée</string>
     <string name="pair_invalid">Mauvais choix.</string>
-    <string name="game_over">Le jeu est terminé. Félicitations ! Vous avez trouvé toutes les %1$d cartes en %2$d secondes</string>
+    <string name="game_over">Le jeu est terminé. Félicitations ! Vous avez trouvé toutes les %1$d cartes en %2$d secondes. Retour au menu principal.</string>
 </resources>
